k8s/writer-api/base/istio/authorizationpolicy/allow-ingress-to-iris-write-api.yaml

apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-to-write-api
spec:
  selector:
    matchLabels:
      io.kompose.service: iris-write-api
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["PLACE_HOLDER"]
      to:
        - operation:
            methods: ["GET","POST"]
